# Bishop

./: LICENSE  README-de.md  README-es.md  README-it.md  README-pl.md  README-ru.md  README.md  bot_session.session  config.ini.example  main.py  pyproject.toml
locales/: en.json  it.json  ru.json
utils/: reddit_handler.py  telegram_handler.py
